--- a/Technomide_Corporation/Technomide_Corporation.csproj
+++ b/Technomide_Corporation/Technomide_Corporation.csproj
@@ -83,12 +83,6 @@
     <Compile Include="Expence_Form.Designer.cs">
       <DependentUpon>Expence_Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Income_form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +115,12 @@
       <DependentUpon>Projects_form.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UC_GroupBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_GroupBox.Designer.cs">
+      <DependentUpon>UC_GroupBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC_Menu.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -151,9 +151,6 @@
     <EmbeddedResource Include="Expence_Form.resx">
       <DependentUpon>Expence_Form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Income_form.resx">
       <DependentUpon>Income_form.cs</DependentUpon>
     </EmbeddedResource>
@@ -179,6 +176,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UC_GroupBox.resx">
+      <DependentUpon>UC_GroupBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UC_Menu.resx">
       <DependentUpon>UC_Menu.cs</DependentUpon>
     </EmbeddedResource>
@@ -201,6 +201,7 @@
   <ItemGroup>
     <None Include="bin\Debug\Images\Users-Group-icon.png" />
     <None Include="bin\Debug\Images\Project-icon.png" />
+    <Content Include="images\Person.png" />
     <Content Include="images\Project-icon.png" />
     <Content Include="images\Users-Group-icon.png" />
     <None Include="bin\Debug\Images\Login-in-icon.png" />
