--- a/Technomide_Corporation/Technomide_Corporation.csproj
+++ b/Technomide_Corporation/Technomide_Corporation.csproj
@@ -52,6 +52,12 @@
     <Compile Include="About_form.Designer.cs">
       <DependentUpon>About_form.cs</DependentUpon>
     </Compile>
+    <Compile Include="About_Us_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="About_Us_Form.Designer.cs">
+      <DependentUpon>About_Us_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Attendance_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,12 +88,6 @@
     </Compile>
     <Compile Include="Expence_Form.Designer.cs">
       <DependentUpon>Expence_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Income_form.cs">
       <SubType>Form</SubType>
@@ -121,11 +121,29 @@
       <DependentUpon>Projects_form.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UC_Employee_Data.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Employee_Data.Designer.cs">
+      <DependentUpon>UC_Employee_Data.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC_GroupBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_GroupBox.Designer.cs">
+      <DependentUpon>UC_GroupBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC_Menu.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UC_Menu.Designer.cs">
       <DependentUpon>UC_Menu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC_Modify.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Modify.Designer.cs">
+      <DependentUpon>UC_Modify.cs</DependentUpon>
     </Compile>
     <Compile Include="Withdrawl_form.cs">
       <SubType>Form</SubType>
@@ -135,6 +153,9 @@
     </Compile>
     <EmbeddedResource Include="About_form.resx">
       <DependentUpon>About_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="About_Us_Form.resx">
+      <DependentUpon>About_Us_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Attendance_Form.resx">
       <DependentUpon>Attendance_Form.cs</DependentUpon>
@@ -150,9 +171,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Expence_Form.resx">
       <DependentUpon>Expence_Form.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Income_form.resx">
       <DependentUpon>Income_form.cs</DependentUpon>
@@ -179,8 +197,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UC_Employee_Data.resx">
+      <DependentUpon>UC_Employee_Data.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC_GroupBox.resx">
+      <DependentUpon>UC_GroupBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UC_Menu.resx">
       <DependentUpon>UC_Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC_Modify.resx">
+      <DependentUpon>UC_Modify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Withdrawl_form.resx">
       <DependentUpon>Withdrawl_form.cs</DependentUpon>
@@ -199,9 +226,18 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Delete1.png" />
+    <None Include="Resources\Delete.jpg" />
+    <None Include="Resources\Add.jpg" />
+    <None Include="Resources\Update.png" />
     <None Include="bin\Debug\Images\Users-Group-icon.png" />
     <None Include="bin\Debug\Images\Project-icon.png" />
+    <Content Include="images\Add.jpg" />
+    <Content Include="images\Delete.jpg" />
+    <Content Include="images\Delete1.png" />
+    <Content Include="images\Person.png" />
     <Content Include="images\Project-icon.png" />
+    <Content Include="images\Update.png" />
     <Content Include="images\Users-Group-icon.png" />
     <None Include="bin\Debug\Images\Login-in-icon.png" />
     <None Include="bin\Debug\Images\Money-2-icon.png" />
